# school-21

./: .bandit  .clang-format  .editorconfig  .gitattributes  .gitignore  .gitleaks.toml  .markdownlint.json  .pre-commit-config.yaml  .ruff.toml  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  SECURITY.md  STATUS.md  checklist.txt  codecov.yml
.github/: dependabot.yml
.github/workflows/: actionlint.yml  c.yml  cpp.yml  devops.yml  docs.yml  lint.yml  pages.yml  (+6 more)
algorithms/python/maze/: .gitattributes  .gitignore  Makefile  README.md  pyproject.toml
algorithms/python/maze/data/maze/: example_1.txt
algorithms/python/maze/docs/: api.md  architecture.md  installation.md  testing.md  usage.md
algorithms/python/maze/src/: main.py
algorithms/python/maze/src/app/: __init__.py  app.py
algorithms/python/maze/src/app/controller/: __init__.py  app_controller.py  cave_auto_play.py  solve_manager.py
algorithms/python/maze/src/app/render/: __init__.py  base_grider.py  cave_grider.py  maze_grider.py  render.py
algorithms/python/maze/src/app/widgets/: __init__.py  main_window.py
algorithms/python/maze/src/app/widgets/content/: __init__.py  base_canvas.py  cave_canvas.py  cave_tab.py  content_container.py  maze_canvas.py  maze_tab.py
algorithms/python/maze/src/app/widgets/toolbar/: __init__.py  base_toolbar.py  cave_toolbar.py  maze_toolbar.py  toolbar_container.py
algorithms/python/maze/src/controller/: __init__.py  cave_service.py  controller.py  maze_service.py
algorithms/python/maze/src/core/: __init__.py  base_field.py  cave.py  maze.py  maze_agent.py  maze_generator.py  maze_solver.py
algorithms/python/maze/src/handlers/: __init__.py  file_handler.py
algorithms/python/maze/src/models/: __init__.py  field.py
algorithms/python/maze/src/utils/: __init__.py  config.py  paths.py
algorithms/python/maze/src/web/: __init__.py  server.py
algorithms/python/maze/src/web/router/: __init__.py  maze.py
algorithms/python/maze/src/web/static/: index.html
algorithms/python/maze/tests/integration/: test_file_handler.py  test_web_maze.py
algorithms/python/maze/tests/unit/: conftest.py  test_main.py  test_paths.py
algorithms/python/maze/tests/unit/app/: test_app.py  test_app_controller_basic.py  test_app_controller_canvas.py  test_app_controller_cave.py  test_app_controller_files.py  test_app_controller_render.py  test_app_controller_solve.py  test_base_toolbar.py  test_cave_auto_play.py  test_cave_toolbar_io.py  test_cave_toolbar_widgets.py  test_griders.py  test_main_window_extras.py  test_maze_toolbar_io.py  test_render.py  test_solve_manager.py  test_widgets.py
algorithms/python/maze/tests/unit/controller/: test_cave_service.py  test_controller.py
algorithms/python/maze/tests/unit/core/: test_cave.py  test_maze.py  test_maze_agent.py  test_maze_generator.py  test_maze_solver.py
docs/: BRANCH_PROTECTION.md  TOOLCHAIN.md
internship/: README.md
machine_learning/: README.md
project_clusters/: README.md
survival_camp/: README.md
(+468 files in other folders)
